# rmq-localvol

./: LICENSE  README.md  pyproject.toml  scratch2.py  scratch3.py
docs/: problem.md
examples/: m1_quantizer_convergence.py
src/rmq/: quantization.py
tests/: test_quantization.py
